# mle_lifen

./: .gitignore  README.md  pyproject.toml
src/lifen_challenge/: extractor.py  main.py  models.py  playground.py
tests/integration/: test_main.py
tests/units/: test_extractor.py
